<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="OfferingAddBinding">

        <import type="android.view.View" />

        <import type="com.yts.tsbible.utills.DateFormat" />

        <variable
            name="model"
            type="com.yts.tsbible.viewmodel.OfferingViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:onClick="hideKeyboard"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:onClick="close"
                android:padding="16dp"
                android:tint="@color/white"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/add_offering"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)->model.saveOffering(v)}"
                android:padding="16dp"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="hideKeyboard"
                android:orientation="vertical">
                <!--날짜-->
                <TextView
                    style="@style/SubTitle"
                    android:layout_marginTop="16dp"
                    android:text="@string/basics" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/date"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        setTimePattern="@{DateFormat.DATE_FORMAT}"
                        setTimeText="@{model.mOffering.date}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="end"
                        android:hint="@string/hint_date"
                        android:onClick="@{(v)->model.dateChange(v)}"
                        android:padding="16dp" />
                </LinearLayout>

                <View
                    style="@style/lineView"
                    android:layout_marginTop="16dp" />

                <!--헌금 종류-->
                <TextView
                    style="@style/SubTitle"
                    android:layout_marginTop="16dp"
                    android:text="@string/kind" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/group_chip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:animateLayoutChanges="true"
                    app:chipSpacing="8dp"
                    app:singleSelection="true" />

                <View
                    style="@style/lineView"
                    android:layout_marginTop="16dp" />

                <!--금액 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SubTitle"
                        android:text="@string/price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_offering_price"
                        android:textColor="@color/colorAccent"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/amount_of_offering"
                        android:inputType="number"
                        android:maxLines="3"
                        android:onTextChanged="@{(text, start, before, count)->model.price(text)}"
                        android:padding="16dp"
                        android:text="@{model.mOfferingPrice}"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        android:onClick="@{()->model.deletePrice()}"
                        android:padding="16dp"
                        app:srcCompat="@drawable/ic_close_color_primary_24dp" />
                </LinearLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/group_chip_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:animateLayoutChanges="true"
                    app:chipSpacing="8dp"
                    app:singleSelection="true" />
                <!--
                                <View
                                    style="@style/lineView"
                                    android:layout_marginTop="16dp" />-->
            </LinearLayout>
        </ScrollView>
        <com.google.android.gms.ads.AdView
            setBanner="@{model.mAdRequest}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_id" />
    </LinearLayout>
</layout>
