<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="SettingBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.tsbible.viewmodel.SettingViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <!--헤더-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:foreground="?android:selectableItemBackground"
                        android:padding="16dp"
                        android:text="@string/setting"
                        android:textColor="@color/textWhiteColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <!--버젼정보-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?android:selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:text="@string/version_information"
                                android:textColor="@color/colorPrimary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@{model.mVersion}"
                                android:textColor="@color/textColor"
                                android:textSize="11sp" />
                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            app:srcCompat="@drawable/ic_featured_play_list_black_24dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <!--문의하기-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="@{(v)->model.contact(v)}"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?android:selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:text="@string/contact_us"
                                android:textColor="@color/colorPrimary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/msg_contact"
                                android:textColor="@color/textColor"
                                android:textSize="11sp" />
                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            app:srcCompat="@drawable/ic_mail_black_24dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <!--리뷰 달기-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="@{(v)->model.reviews(v)}"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?android:selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:text="@string/add_review"
                                android:textColor="@color/colorPrimary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/msg_review"
                                android:textColor="@color/textColor"
                                android:textSize="11sp" />
                        </LinearLayout>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tint="@color/colorPrimary"
                            app:srcCompat="@drawable/ic_rate_review_black_24dp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>